# redacted

./: AGENTS.md  Cargo.toml  README.md
docs/: cli.md  config.md  detection.md  overview.md  security.md  testing.md  threat-model.md
skills/redaction-cli/: SKILL.md
src/: cli.rs  config.rs  errors.rs  except.rs  io_safe.rs  lib.rs  main.rs  policy.rs  redact.rs  report.rs  traverse.rs
src/detector/: custom.rs  mod.rs  pii.rs  secrets.rs
tests/: integration.rs
